# MBExtender

./: .gitignore
MBExtender/: CMakeLists.txt  CMakeSettings.json
MBExtender/cmake/toolchains/: ClangCl.cmake
MBExtender/plugins/: CMakeLists.txt
MBExtender/plugins/FileExtension/: CMakeLists.txt  FileExtension.cpp
MBExtender/plugins/GraphicsExtension/: BloomPass.cpp  BloomPass.h  CMakeLists.txt  DTSRenderer.cpp  DTSRenderer.h  GraphicsExtension_script.cpp  InteriorExtension.cpp  MarbleRenderer.cpp  Pass.cpp  Pass.h  dtsRender.cpp  fullscreenHack.cpp  postProcessing.cpp  postProcessing.h  reflectiveMarble.cpp
MBExtender/plugins/GuiExtension/: GuiExtension.cpp
MBExtender/plugins/JSONSupport/: JSONSupport.cpp  arrayObject.cpp
MBExtender/plugins/MBCrypt/: CMakeLists.txt  KeyStore.cpp  KeyStore.h  MBCrypt.py  MBDecrypt.cpp  MBDecrypt.h  MBPakFile.cpp  MBPakFile.h  MBPakFileEntry.h  MemoryStream.cpp  MemoryStream.h  requirements.txt
MBExtender/plugins/MBPlatinum/: CMakeLists.txt  MBPlatinum.cpp  consoleFunctions.cpp  crashReporter-win32.cpp  editorRender.cpp  fading.cpp  interpolation.cpp  particleEmitterFix.cpp  radar.cpp  rrec.cpp  rrec.h  shutdownLogging-win32.cpp  smallOverrides.cpp  sync.cpp  sync.h  triggers.cpp
MBExtender/plugins/MarbleGhostingFix/: ClientNetwork.cpp  ConsoleMethods.cpp  Interpolation.cpp  MarbleGhostingFix.h  MarbleOverrides.cpp  ServerNetwork.cpp
MBExtender/plugins/VFSLib/: VFSLib.cpp  (+4 more)
MBExtender/rust/: Cargo.toml
MBExtender/rust/mbcrypt/: Cargo.toml
MBExtender/rust/mbcrypt/src/: keystore.rs  lib.rs  mbpakfile.rs  memorystream.rs
(+50 files in other folders)
