[package]
name = "mbcrypt"
version = "0.1.0"
authors = ["RandomityGuy <31925790+RandomityGuy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4", features = ["release_max_level_debug", "std"] }
mbx = { path = "../mbx" }
mbx-proc = { path = "../mbx-proc" }
compress = "0.2.1"
aes = "0.7.0"
rsa = "0.4.0"
hex = "0.4.3"
block-modes = "0.8.1"
base64 = "0.13.0"
rsa-der = "0.2.1"
lazy_static = "1.4.0"
sha2 = "0.9.4"
blake3 = "0.3.7"